# SCUT-racing

./: CMakeLists.txt  README.md
DL/: .gitignore
DL/docs/: README.md
DL/docs/homework2/: U-Net论文阅读.md  深度学习笔记.md
DL/src/: check_data.py  net.py  test.py
ROS2作业/基础作业/: README.md
ROS2作业/基础作业/src/ros2_homework_basic_package/: CMakeLists.txt  README.md  package.xml
ROS2作业/基础作业/src/ros2_homework_basic_package/config/: turtle_params.yaml
ROS2作业/基础作业/src/ros2_homework_basic_package/launch/: turtle_figure8.launch.py
ROS2作业/基础作业/src/ros2_homework_basic_package/result/: Screencast from 2026年06月05日 21时42分16秒.webm
ROS2作业/基础作业/src/ros2_homework_basic_package/src/: figure8_node.cpp
ROS2作业/进阶作业/: README.md
ROS2作业/进阶作业/map_to_visualize/: map_to_visualize_0.db3  metadata.yaml
ROS2作业/进阶作业/src/fsd_common_msgs/: package.xml
ROS2作业/进阶作业/src/ros2_homework_advanced_package/: CMakeLists.txt  README.md  package.xml
ROS2作业/进阶作业/src/ros2_homework_advanced_package/launch/: map_visualizer.launch.py
ROS2作业/进阶作业/src/ros2_homework_advanced_package/src/: map_visualizer_node.cpp
cmakeproject/: .gitignore
cmakeproject/common/kalman/: CMakeLists.txt
cmakeproject/modules/M2/: CMakeLists.txt
common/math/: CMakeLists.txt
homework-2.1/: setup.sh
homework-2.1/linux_practice/backup/: daily_report.txt
modules/A2/: CMakeLists.txt
作业1/: genetic_algorithm.py
最优化与控制作业/: README.md
最优化与控制作业/作业1/: bicycle_models_problem.m  lane_follower.m
最优化与控制作业/作业2/: dog_optimization.cpp
机器学习作业/: README.md
机器学习作业/作业1/: README.md  test_ga.py
机器学习作业/作业2/: LinearRegression_California.ipynb  LinearRegression_Regularized_California.ipynb
机器学习作业/作业3/: SVM_Iris.ipynb
机器学习作业/作业4/: Kmeans_Exp.ipynb
