<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fsd_common_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions used by the provided cone map bag.</description>
  <maintainer email="hansennie@example.com">hansennie</maintainer>
  <license>Not specified</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>can_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
